Tests/CompilerTests/positive/partial-type-substitution.hylo
//! stage:typing no-std

struct A {}

fun f<T, U>(x: sink U) -> U { x }

fun check<T>(x: T) {}

fun main() {
  check<Void>(f<A, _>(()))
}
