Tests/CompilerTests/negative/missing-argument.hylo
//! no-std

fun f(first x: Void = (), second y: Void) {}

fun main() {
  f(first: (), second: ())
  f(second: ())
  f()
}
